Remove java.endorsed.dirs options from xml files for tests and command scripts.
Signed-off-by: hs536 <sawamura.hiroki@fujitsu.com>